041_reverse_str/grade.txt
Grading at 09/20/2019:16:21:45.966364
For commit ID 7017339464ff347138d95bc5fd81f88da562c3ec
Grading at Fri Sep 20 12:21:45 EDT 2019
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:6:12: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
   if(*str!=NUll){
            ^~~~
            NULL
reverse.c:6:12: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
